[gd_scene load_steps=25 format=3 uid="uid://dfpeq8ikcp1wc"]

[ext_resource type="Script" path="res://scenes/gui/game_gui.gd" id="1_heuwt"]
[ext_resource type="PackedScene" uid="uid://cuqtin2smf42h" path="res://scenes/gui/panel/game_top_panel.tscn" id="2_4ekn0"]
[ext_resource type="PackedScene" uid="uid://cmal7eblkh33l" path="res://scenes/gui/panel/game_world_track_panel.tscn" id="3_wjgdj"]
[ext_resource type="Texture2D" uid="uid://duwxecohirtpr" path="res://assets/icon_park/镜子2_mirror-two.svg" id="9_11lm6"]
[ext_resource type="Texture2D" uid="uid://x3lg83lirlhc" path="res://assets/icon_park/地图_map-draw.svg" id="10_bdjt4"]
[ext_resource type="Texture2D" uid="uid://cnld60u7rpxkv" path="res://assets/icon_park/本地_local-two.svg" id="11_chx2f"]
[ext_resource type="Texture2D" uid="uid://bwrtwad4y7ct1" path="res://assets/icon_park/搜索_search.svg" id="12_efpiw"]
[ext_resource type="Texture2D" uid="uid://cwdk6g3kghm5v" path="res://assets/icon_park/世界_world.svg" id="13_23sag"]
[ext_resource type="Texture2D" uid="uid://b1di533muewx2" path="res://assets/icon_park/全屏播放_full-screen-play.svg" id="14_iwx8h"]
[ext_resource type="Texture2D" uid="uid://dwjtbkeorddo6" path="res://assets/icon_park/排行榜_ranking.svg" id="15_1mjtj"]
[ext_resource type="Texture2D" uid="uid://bo3js64jh1014" path="res://assets/icon_park/夜晚模式_dark-mode.svg" id="16_y7cb5"]
[ext_resource type="Texture2D" uid="uid://d2em5ph4336s3" path="res://assets/icon_park/分析_analysis.svg" id="17_gl51h"]
[ext_resource type="PackedScene" uid="uid://dsrkjn1ew77q0" path="res://scenes/gui/panel/game_unit_info_panel.tscn" id="18_r0akp"]
[ext_resource type="PackedScene" uid="uid://dsvabdnd8uany" path="res://scenes/gui/panel/game_city_info_panel.tscn" id="19_karjy"]
[ext_resource type="PackedScene" uid="uid://bfwi0qylm5dh6" path="res://scenes/gui/panel/game_turn_panel.tscn" id="20_7b5h4"]
[ext_resource type="PackedScene" uid="uid://bmbo3lvy76glo" path="res://scenes/gui/panel/game_city_product_panel.tscn" id="21_pw5r8"]
[ext_resource type="PackedScene" uid="uid://df6kd5ngx5vm8" path="res://scenes/menu/hot_seat_changing_scene.tscn" id="27_omnpr"]
[ext_resource type="PackedScene" uid="uid://6rscixmykdb1" path="res://scenes/gui/panel/wiki_panel.tscn" id="29_dio20"]
[ext_resource type="PackedScene" uid="uid://babhwv4eoh1kt" path="res://scenes/gui/mouse_hover_tile_panel.tscn" id="32_7g8tl"]
[ext_resource type="StyleBox" uid="uid://cysjabncooi5o" path="res://styles/menu_deep_blue_button_normal.tres" id="33_4g664"]
[ext_resource type="StyleBox" uid="uid://myu1cithxhwy" path="res://styles/menu_deep_blue_button_hover.tres" id="34_aeh5d"]
[ext_resource type="StyleBox" uid="uid://dqr84amdys5ut" path="res://styles/menu_deep_blue_button_press.tres" id="35_ltdyn"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iwk70"]
bg_color = Color(0.133333, 0.133333, 0.133333, 0.901961)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ikan1"]
bg_color = Color(0.0666667, 0.14902, 0.243137, 0.933333)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.803922, 0.698039, 0.501961, 1)

[node name="GameGUI" type="CanvasLayer"]
script = ExtResource("1_heuwt")

[node name="MainVBox" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TopPanel" parent="MainVBox" instance=ExtResource("2_4ekn0")]
layout_mode = 2

[node name="MainContainer" type="MarginContainer" parent="MainVBox"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2

[node name="MidTopLeftVBox" parent="MainVBox/MainContainer" instance=ExtResource("3_wjgdj")]
layout_mode = 2

[node name="MidTopRightPanel" type="PanelContainer" parent="MainVBox/MainContainer"]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 0

[node name="ButtonHBox" type="HBoxContainer" parent="MainVBox/MainContainer/MidTopRightPanel"]
layout_mode = 2

[node name="RankButton" type="Button" parent="MainVBox/MainContainer/MidTopRightPanel/ButtonHBox"]
layout_mode = 2
tooltip_text = "世界排名"
icon = ExtResource("15_1mjtj")

[node name="EraButton" type="Button" parent="MainVBox/MainContainer/MidTopRightPanel/ButtonHBox"]
visible = false
layout_mode = 2
icon = ExtResource("16_y7cb5")

[node name="ReportButton" type="Button" parent="MainVBox/MainContainer/MidTopRightPanel/ButtonHBox"]
layout_mode = 2
tooltip_text = "报告列表"
icon = ExtResource("17_gl51h")

[node name="MiniMapPanel" type="PanelContainer" parent="MainVBox/MainContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="MiniMapVBox" type="VBoxContainer" parent="MainVBox/MainContainer/MiniMapPanel"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8
alignment = 2

[node name="MiniMapBtnHBox" type="HBoxContainer" parent="MainVBox/MainContainer/MiniMapPanel/MiniMapVBox"]
layout_mode = 2

[node name="FilterButton" type="Button" parent="MainVBox/MainContainer/MiniMapPanel/MiniMapVBox/MiniMapBtnHBox"]
layout_mode = 2
icon = ExtResource("9_11lm6")

[node name="OptionButton" type="Button" parent="MainVBox/MainContainer/MiniMapPanel/MiniMapVBox/MiniMapBtnHBox"]
layout_mode = 2
icon = ExtResource("10_bdjt4")

[node name="PinButton" type="Button" parent="MainVBox/MainContainer/MiniMapPanel/MiniMapVBox/MiniMapBtnHBox"]
layout_mode = 2
icon = ExtResource("11_chx2f")

[node name="SearchButton" type="Button" parent="MainVBox/MainContainer/MiniMapPanel/MiniMapVBox/MiniMapBtnHBox"]
layout_mode = 2
icon = ExtResource("12_efpiw")

[node name="StrategyViewButton" type="Button" parent="MainVBox/MainContainer/MiniMapPanel/MiniMapVBox/MiniMapBtnHBox"]
layout_mode = 2
icon = ExtResource("13_23sag")

[node name="FullScreenButton" type="Button" parent="MainVBox/MainContainer/MiniMapPanel/MiniMapVBox/MiniMapBtnHBox"]
layout_mode = 2
icon = ExtResource("14_iwx8h")

[node name="MarginContainer" type="MarginContainer" parent="MainVBox/MainContainer/MiniMapPanel/MiniMapVBox"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SubViewportContainer" type="SubViewportContainer" parent="MainVBox/MainContainer/MiniMapPanel/MiniMapVBox/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 8

[node name="SubViewport" type="SubViewport" parent="MainVBox/MainContainer/MiniMapPanel/MiniMapVBox/MarginContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(288, 162)
render_target_update_mode = 4

[node name="RightDownHBox" type="HBoxContainer" parent="MainVBox/MainContainer"]
layout_mode = 2
size_flags_horizontal = 8
mouse_filter = 2
theme_override_constants/separation = 0
alignment = 2

[node name="UnitInfoPanel" parent="MainVBox/MainContainer/RightDownHBox" instance=ExtResource("18_r0akp")]
visible = false
layout_mode = 2

[node name="CityInfoPanel" parent="MainVBox/MainContainer/RightDownHBox" instance=ExtResource("19_karjy")]
visible = false
layout_mode = 2

[node name="TurnPanel" parent="MainVBox/MainContainer/RightDownHBox" instance=ExtResource("20_7b5h4")]
layout_mode = 2

[node name="CityProductPanel" parent="MainVBox/MainContainer/RightDownHBox" instance=ExtResource("21_pw5r8")]
visible = false
layout_mode = 2

[node name="WikiPanelContainer" parent="." instance=ExtResource("29_dio20")]
visible = false

[node name="MouseHoverTilePanel" parent="." instance=ExtResource("32_7g8tl")]

[node name="MenuOverlay" type="PanelContainer" parent="."]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_iwk70")

[node name="MenuCenterContainer" type="CenterContainer" parent="MenuOverlay"]
layout_mode = 2

[node name="MenuPanelContainer" type="PanelContainer" parent="MenuOverlay/MenuCenterContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_ikan1")

[node name="MenuMarginContainer" type="MarginContainer" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 5

[node name="MenuVBoxContainer" type="VBoxContainer" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer"]
custom_minimum_size = Vector2(120, 200)
layout_mode = 2

[node name="TitleLabel" type="Label" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
text = "菜单"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HSeparator" type="HSeparator" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2

[node name="ReturnButton" type="Button" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("33_4g664")
theme_override_styles/hover = ExtResource("34_aeh5d")
theme_override_styles/pressed = ExtResource("35_ltdyn")
text = "返回游戏"

[node name="EmptyLabel" type="Label" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="QuickSaveButton" type="Button" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("33_4g664")
theme_override_styles/hover = ExtResource("34_aeh5d")
theme_override_styles/pressed = ExtResource("35_ltdyn")
text = "快速保存游戏"

[node name="SaveButton" type="Button" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("33_4g664")
theme_override_styles/hover = ExtResource("34_aeh5d")
theme_override_styles/pressed = ExtResource("35_ltdyn")
text = "保存游戏"

[node name="LoadButton" type="Button" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("33_4g664")
theme_override_styles/hover = ExtResource("34_aeh5d")
theme_override_styles/pressed = ExtResource("35_ltdyn")
text = "读取游戏"

[node name="NewContentButton" type="Button" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("33_4g664")
theme_override_styles/hover = ExtResource("34_aeh5d")
theme_override_styles/pressed = ExtResource("35_ltdyn")
text = "新内容"

[node name="OptionButton" type="Button" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("33_4g664")
theme_override_styles/hover = ExtResource("34_aeh5d")
theme_override_styles/pressed = ExtResource("35_ltdyn")
text = "选项"

[node name="FadeButton" type="Button" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("33_4g664")
theme_override_styles/hover = ExtResource("34_aeh5d")
theme_override_styles/pressed = ExtResource("35_ltdyn")
text = "隐退"

[node name="RestartButton" type="Button" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("33_4g664")
theme_override_styles/hover = ExtResource("34_aeh5d")
theme_override_styles/pressed = ExtResource("35_ltdyn")
text = "重新开始"

[node name="MainMenuButton" type="Button" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("33_4g664")
theme_override_styles/hover = ExtResource("34_aeh5d")
theme_override_styles/pressed = ExtResource("35_ltdyn")
text = "返回主菜单"

[node name="DesktopButton" type="Button" parent="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer"]
layout_mode = 2
theme_override_styles/normal = ExtResource("33_4g664")
theme_override_styles/hover = ExtResource("34_aeh5d")
theme_override_styles/pressed = ExtResource("35_ltdyn")
text = "返回桌面"

[node name="HotSeatChangingScene" parent="." instance=ExtResource("27_omnpr")]
visible = false

[connection signal="pressed" from="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer/ReturnButton" to="." method="_on_return_button_pressed"]
[connection signal="pressed" from="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="MenuOverlay/MenuCenterContainer/MenuPanelContainer/MenuMarginContainer/MenuVBoxContainer/DesktopButton" to="." method="_on_desktop_button_pressed"]
